refactor: name public job schema
